audience question 1 and 2

--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -1,4 +1,43 @@
-<div class="app flex-row align-items-center">
+<div class="align-items-center bg-black">
+  <header class="navbar navbar-ut">
+    <a class="navbar-brand" href="#">#UT<strong>Beyond</strong></a>
+  </header>
+
+  <div class="animated fadeIn">
+    <div class="row">
+      <!-- question 1 -->
+      <div class="col-sm-12">
+        <div class="card card-inverse card-warning text-center card-ut">
+          <div class="card-block">
+            <blockquote class="card-blockquote">
+              <p class="question-ut">What comes to your mind when you hear the word “Digital” (answer in one word)? </p>
+              <form class="form-horizontal">
+                <div class="form-group row">
+                  <div class="col-sm-12">
+                    <input type="text" class="form-control" placeholder="Tulis jawaban anda disini">
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-sm btn-primary">Submit</button>
+              </form>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- question 2 -->
+      <div class="col-sm-12">
+        <div class="card card-inverse card-warning text-center card-ut">
+          <div class="card-block">
+            <blockquote class="card-blockquote">
+              <p class="question-ut">Can you become successful without being Digital?</p>
+              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-check"></i> Yes</button>
+              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> No</button>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
