--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -10,14 +10,14 @@
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
-              <p class="question-ut">What comes to your mind when you hear the word “Digital” (answer in one word)? </p>
+              <p class="question-ut">Apa yang muncul di benak anda ketika mendengar kata “Digital” (jawab dalam satu kata)?</p>
               <form class="form-horizontal">
                 <div class="form-group row">
                   <div class="col-sm-12">
                     <input type="text" class="form-control" placeholder="Tulis jawaban anda disini">
                   </div>
                 </div>
-                <button type="submit" class="btn btn-sm btn-primary">Submit</button>
+                <button type="submit" class="btn btn-sm btn-primary">Jawab</button>
               </form>
             </blockquote>
           </div>
@@ -28,9 +28,83 @@
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
-              <p class="question-ut">Can you become successful without being Digital?</p>
-              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-check"></i> Yes</button>
-              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> No</button>
+              <p class="question-ut">Bisakah anda sukses tanpa menjadi Digital?</p>
+              <form class="form-horizontal">
+                <div class="form-group row">
+                  <div class="col-sm-12">
+                    <input type="text" class="form-control" placeholder="Tulis jawaban anda disini">
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-sm btn-primary">Jawab</button>
+              </form>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- question 3 -->
+      <div class="col-sm-12">
+        <div class="card card-inverse card-warning text-center card-ut">
+          <div class="card-block">
+            <blockquote class="card-blockquote">
+              <p class="question-ut">Apakah UT sebaiknya berubah menjadi organisasi digital?</p>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
+                  Ya, segera
+                </label>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                  Tidak usah buru - buru
+                </label>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                  Tunggu dan Amati
+                </label>
+              </div>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- question 4 -->
+      <div class="col-sm-12">
+        <div class="card card-inverse card-warning text-center card-ut">
+          <div class="card-block">
+            <blockquote class="card-blockquote">
+              <p class="question-ut">Apa dampak digitalisasi terhadap kehidupan kerja anda?</p>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1">
+                  Akan mempersulit kehidupan kerja saya
+                </label>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios2" value="option2">
+                  Akan membuat kehidupan kerja saya lebih efisien 
+                </label>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios3" value="option3">
+                  Tidak ada perubahan
+                </label>
+              </div>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- question 5 -->
+      <div class="col-sm-12">
+        <div class="card card-inverse card-warning text-center card-ut">
+          <div class="card-block">
+            <blockquote class="card-blockquote">
+              <p class="question-ut">Bisakah kita hari ini berpegang teguh untuk melakukan “THINKING” digital dalam cara kita bekerja?</p>
+              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-check"></i> Ya</button>
+              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Tidak</button>
             </blockquote>
           </div>
         </div>
