--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17,4 +17,22 @@
 		color: #000;
 		font-size: 16px;
 	}
+
+	.form-check-label{
+		color: #25303f;
+	}
+
+	.card-header {
+		color: #25303f;
+	}
+
+	.row > div {
+		padding: 0;
+	}
+}
+
+.bg-black {
+	.row {
+		margin: 0;
+	}
 }
