display (blm slsai)

--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -13,8 +13,10 @@
               <div class="h4 m-0 title-hashtag-ut">#UTBeyond</div>
               <div>10 tweet lagi untuk memulai kick off!</div>
               <div class="progress progress-lg my-1">
-                <div class="progress-bar bg-success progressbar-ut" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                <div class="progress-bar bg-success progressbar-ut" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <label><h4>25%</h4></label>
               </div>
+              <div><strong>25</strong> partisipan polling</div>
               <!-- <small class="text-muted">25%</small> -->
             </div>
           </div>
@@ -22,15 +24,57 @@
         <div class="col-md-6 no-padding">
           <div class="col-md-12 no-padding">
             <div class="card card-success card-inverse text-center height-45vh" style="margin-bottom: 0">
-              <div class="card-block">
-                <h1>adfasf</h1>
+              <div class="card-body">
+                <div style="background: black; height: 300px">
+                  
+                </div>
+                <div style="background: black; height: 300px">
+                  
+                </div>
               </div>
             </div>
           </div>
           <div class="col-md-12 no-padding">
-            <div class="card card-primary card-inverse text-center height-45vh">
-              <div class="card-block">
-                <h1>adfasf</h1>
+            <div class="card card-primary height-45vh comment-section">
+              <div class="card-header">
+                <h5>Tweets & komentar</h5>
+              </div>
+              <div class="card-block" style="overflow-y: auto">
+                <div class="card card-light">
+                  <div class="card-body">
+                    <p class="card-text"><i class="fa fa-twitter"></i> @unitedtractors</p>
+                    <h5 class="card-title">With supporting text below as a natural lead-in to additional content.</h5>
+                  </div>
+                </div>
+
+                <div class="card card-light">
+                  <div class="card-body">
+                    <p class="card-text"><i class="fa fa-comment"></i> saluang</p>
+                    <h5 class="card-title">With supporting text below as a natural lead-in to additional content.</h5>
+                  </div>
+                </div>
+
+                <div class="card card-light">
+                  <div class="card-body">
+                    <p class="card-text"><i class="fa fa-twitter"></i> @unitedtractors</p>
+                    <h5 class="card-title">With supporting text below as a natural lead-in to additional content.</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                <form>
+                  <div class="row">
+                    <div class="col-3">
+                      <input type="text" class="form-control" placeholder="Nama">
+                    </div>
+                    <div class="col-8">
+                      <input type="text" class="form-control" placeholder="Komentar..." aria-label="Search for...">
+                    </div>
+                    <div class="col-1">
+                      <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-send"></i></button>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
