--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -1,12 +1,13 @@
 <div class="align-items-center bg-black">
   <header class="navbar navbar-ut">
     <a class="navbar-brand" href="#">#UT<strong>Beyond</strong></a>
+    <button class="btn btn-sm btn-link btn-refresh-ut" (click)="refreshPage()"><i class="fa fa-refresh"></i></button>
   </header>
 
   <div class="animated fadeIn">
     <div class="row">
       <!-- question 1 -->
-      <div class="col-sm-12">
+      <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 1 && !answer1Answered">
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
@@ -14,99 +15,61 @@
               <form class="form-horizontal">
                 <div class="form-group row">
                   <div class="col-sm-12">
-                    <input type="text" class="form-control" placeholder="Tulis jawaban anda disini">
+                    <input type="text" class="form-control" placeholder="Tulis jawaban anda disini" [(ngModel)]="answer1" name="answer1">
                   </div>
                 </div>
-                <button type="submit" class="btn btn-sm btn-primary">Jawab</button>
+                <button type="submit" class="btn btn-md btn-vote-ut btn-primary" (click)="submitAnswer1()">Jawab</button>
               </form>
             </blockquote>
           </div>
         </div>
       </div>
       <!-- question 2 -->
-      <div class="col-sm-12">
+      <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 2 && !answer2Answered">
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <p class="question-ut">Bisakah anda sukses tanpa menjadi Digital?</p>
-              <form class="form-horizontal">
-                <div class="form-group row">
-                  <div class="col-sm-12">
-                    <input type="text" class="form-control" placeholder="Tulis jawaban anda disini">
-                  </div>
-                </div>
-                <button type="submit" class="btn btn-sm btn-primary">Jawab</button>
-              </form>
+              <button class="btn btn-md btn-vote-ut btn-primary" (click)="submitAnswer2('yes')"><i class="fa fa-check"></i> Ya</button>
+              <button class="btn btn-md btn-vote-ut btn-danger" (click)="submitAnswer2('no')"><i class="fa fa-ban"></i> Tidak</button>
             </blockquote>
           </div>
         </div>
       </div>
       <!-- question 3 -->
-      <div class="col-sm-12">
+      <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 3 && !answer3Answered">
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <p class="question-ut">Apakah UT sebaiknya berubah menjadi organisasi digital?</p>
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
-                  Ya, segera
-                </label>
-              </div>
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                  Tidak usah buru - buru
-                </label>
-              </div>
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-                  Tunggu dan Amati
-                </label>
-              </div>
-              <button type="submit" class="btn btn-sm btn-primary">Jawab</button>
+              <button class="col-sm-12 btn btn-md btn-vote-ut btn-primary marginbottom" (click)="submitAnswer3('Ya, segera')">Ya, segera</button>
+              <button class="col-sm-12 btn btn-md btn-vote-ut btn-info marginbottom" (click)="submitAnswer3('Tidak usah buru-buru')">Tidak usah buru-buru</button>
+              <button class="col-sm-12 btn btn-md btn-vote-ut btn-danger marginbottom" (click)="submitAnswer3('Tunggu dan amati')">Tunggu dan amati</button>
             </blockquote>
           </div>
         </div>
       </div>
       <!-- question 4 -->
-      <div class="col-sm-12">
+      <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 4 && !answer4Answered">
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <p class="question-ut">Apa dampak digitalisasi terhadap kehidupan kerja anda?</p>
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1">
-                  Akan mempersulit kehidupan kerja saya
-                </label>
-              </div>
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios2" value="option2">
-                  Akan membuat kehidupan kerja saya lebih efisien 
-                </label>
-              </div>
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios3" value="option3">
-                  Tidak ada perubahan
-                </label>
-              </div>
-              <button type="submit" class="btn btn-sm btn-primary">Jawab</button>
+              <button class="col-sm-12 btn btn-md btn-vote-ut btn-primary marginbottom" (click)="submitAnswer4('Akan mempersulit kehidupan kerja saya')">Akan mempersulit kehidupan kerja saya</button>
+              <button class="col-sm-12 btn btn-md btn-vote-ut btn-success marginbottom" (click)="submitAnswer4('Akan membuat kehidupan kerja saya lebih efisien')">Akan membuat kehidupan kerja saya lebih efisien</button>
+              <button class="col-sm-12 btn btn-md btn-vote-ut btn-danger marginbottom" (click)="submitAnswer4('Tidak ada perubahan')">Tidak ada perubahan</button>
             </blockquote>
           </div>
         </div>
       </div>
       <!-- question 5 -->
-      <div class="col-sm-12">
+      <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 5 && !answer5Answered">
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <p class="question-ut">Bisakah kita hari ini berpegang teguh untuk melakukan “THINKING” digital dalam cara kita bekerja?</p>
-              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-check"></i> Ya</button>
-              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Tidak</button>
+              <button type="submit" class="btn btn-md btn-vote-ut btn-primary" (click)="submitAnswer5('yes')"><i class="fa fa-check"></i> Ya</button>
+              <button type="reset" class="btn btn-md btn-vote-ut btn-danger" (click)="submitAnswer5('no')"><i class="fa fa-ban"></i> Tidak</button>
             </blockquote>
           </div>
         </div>
