--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -8,6 +8,7 @@
     <div class="row">
       <!-- question 1 -->
       <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 1 && !answer1Answered">
+  <h1 style="text-align: center;background-color: #20a8d8;margin: 0;padding: 10px;color: #fff;">Vote</h1>    
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
@@ -26,6 +27,7 @@
       </div>
       <!-- question 2 -->
       <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 2 && !answer2Answered">
+  <h1 style="text-align: center;background-color: #20a8d8;margin: 0;padding: 10px;color: #fff;">Vote</h1>    
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
@@ -38,6 +40,7 @@
       </div>
       <!-- question 3 -->
       <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 3 && !answer3Answered">
+  <h1 style="text-align: center;background-color: #20a8d8;margin: 0;padding: 10px;color: #fff;">Vote</h1>    
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
@@ -51,6 +54,7 @@
       </div>
       <!-- question 4 -->
       <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 4 && !answer4Answered">
+  <h1 style="text-align: center;background-color: #20a8d8;margin: 0;padding: 10px;color: #fff;">Vote</h1>    
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
@@ -64,6 +68,7 @@
       </div>
       <!-- question 5 -->
       <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 5 && !answer5Answered">
+  <h1 style="text-align: center;background-color: #20a8d8;margin: 0;padding: 10px;color: #fff;">Vote</h1>    
         <div class="card card-inverse card-warning text-center card-ut">
           <div class="card-block">
             <blockquote class="card-blockquote">
@@ -75,39 +80,41 @@
         </div>
       </div>
 
-      <!-- comment -->
-      <div class="col-sm-12 mt-2">
-        <div class="card card-inverse card-warning card-ut">
-          <div class="card-header text-left">
-            Tambah komentar
-          </div>
-          <div class="card-block">
-            <form>
-              <div class="row">
-                <div class="form-group col-3">
-                  <input type="text" class="form-control" placeholder="Nama">
-                </div>
-                <div class="form-group col-9">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Komentar..." aria-label="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-send"></i></button>
-                    </span>
-                  </div>
-                </div>
+      <div class="container">
+        <div class="row" style="max-height: 81vh">
+          <div class="col-sm-12" style="overflow-y: auto; margin: 10px 0 0 0">
+            <div class="card card-success" style="border-radius: 10px; padding: 10px; width: 90vw; margin-bottom: 4px; color: #fff" *ngFor="let komen of komentars">
+              <div class="card-body">
+                {{komen.nama}}: {{komen.komentar}}
               </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
 
-<div id="exampleModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <p>Komentar terkirim!</p>
+      <!-- comment -->
+      <div class="col-sm-12 mt-2" style="position: fixed; bottom: 0">
+        <form>
+          <div class="row">
+            <div class="form-group col-12" style="margin-bottom: 0" *ngIf="!namaExist">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Masukan nama anda." [(ngModel)]="nama" name="nama" style="border-radius: 100px;height: 42px;">
+                <span class="input-group-btn">
+                  <button class="btn btn-success btn-secondary" type="button" data-toggle="modal" data-target="#exampleModal" style="border-radius: 100px" (click)="saveName(nama)"><i class="fa fa-send" style="position: absolute;right: 13px;bottom: 13px;"></i></button>
+                </span>
+              </div>
+            </div>
+            <div class="form-group col-12" style="margin-bottom: 0" *ngIf="namaExist">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Halo {{nama}}, silahkan masukkan komentar..." [(ngModel)]="komentar" name="komentar" style="border-radius: 100px;height: 42px;">
+                <span class="input-group-btn">
+                  <button class="btn btn-success btn-secondary" type="button" data-toggle="modal" data-target="#exampleModal" style="border-radius: 100px" (click)="comment(komentar)"><i class="fa fa-send" style="position: absolute;right: 13px;bottom: 13px;"></i></button>
+                </span>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
