--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -96,7 +96,7 @@
       <div class="col-sm-12 mt-2" style="position: fixed; bottom: 0">
         <form>
           <div class="row">
-            <div class="form-group col-12" style="margin-bottom: 0" *ngIf="!namaExist">
+            <div class="form-group col-12" style="margin-bottom: 5px" *ngIf="!namaExist">
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Masukan nama anda." [(ngModel)]="nama" name="nama" style="border-radius: 100px;height: 42px;">
                 <span class="input-group-btn">
