--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -23,13 +23,140 @@
         </div>
         <div class="col-md-6 no-padding">
           <div class="col-md-12 no-padding">
-            <div class="card card-success card-inverse text-center height-45vh" style="margin-bottom: 0">
+            <div class="card card-poll card-success height-45vh" style="margin-bottom: 0">
               <div class="card-body">
-                <div style="background: black; height: 300px">
-                  
+                <div class="animated fadeIn" *ngIf="current_poll == 1">
+                  <div class="card card-success" style="width: 100%;">
+                    <div class="card-body text-center">
+                      <h5 class="card-title pt-2">Apa yang muncul di benak anda ketika mendengar kata “Digital”?</h5>
+                      <angular-tag-cloud
+                        [data]="data"
+                        [width]="options.width"
+                        [height]="options.height"
+                        [overflow]="options.overflow">
+                      </angular-tag-cloud>
+                    </div>
+                  </div>
                 </div>
-                <div style="background: black; height: 300px">
-                  
+                <div class="animated fadeIn" *ngIf="current_poll == 2">
+                  <div class="card card-success" style="width: 100%;">
+                    <div class="card-body text-center">
+                      <h5 class="card-title pt-2">Bisakah anda sukses tanpa menjadi Digital?</h5>
+                      <div>
+                        <canvas baseChart
+                                style="display: block; height: 300px"
+                                [data]="doughnutChartData"
+                                [labels]="doughnutChartLabels"
+                                [chartType]="doughnutChartType">
+                        </canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="animated fadeIn" *ngIf="current_poll == 3">
+                  <div class="card card-success" style="width: 100%;">
+                    <div class="card-body text-center">
+                      <h5 class="card-title pt-2">Apakah UT sebaiknya berubah menjadi organisasi digital?</h5>
+                      <div class="row">
+                        <div class="col-md-2 p-1">
+                          Ya, segera
+                        </div>
+                        <div class="col-md-8">
+                          <div class="progress progress-lg my-1 progressbar-poll">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>15%</h6></label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-2 p-1">
+                          Tidak usah buru - buru
+                        </div>
+                        <div class="col-md-8">
+                          <div class="progress progress-lg my-1 progressbar-poll">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>45%</h6></label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-2 p-1">
+                          Tunggu dan Amati
+                        </div>
+                        <div class="col-md-8">
+                          <div class="progress progress-lg my-1 progressbar-poll">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>25%</h6></label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="animated fadeIn" *ngIf="current_poll == 4">
+                  <div class="card card-success" style="width: 100%;">
+                    <div class="card-body text-center">
+                      <h5 class="card-title pt-2">Apa dampak digitalisasi terhadap kehidupan kerja anda?</h5>
+                      <div class="row">
+                        <div class="col-md-2 p-1">
+                          <small style="font-size: 8px">Mempersulit kehidupan kerja saya</small>
+                        </div>
+                        <div class="col-md-8">
+                          <div class="progress progress-lg my-1 progressbar-poll">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>15%</h6></label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-2 p-1">
+                          <small style="font-size: 8px">Kehidupan kerja saya lebih efisien</small>
+                        </div>
+                        <div class="col-md-8">
+                          <div class="progress progress-lg my-1 progressbar-poll">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>45%</h6></label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-2 p-1">
+                          <small>Tidak ada perubahan</small>
+                        </div>
+                        <div class="col-md-8">
+                          <div class="progress progress-lg my-1 progressbar-poll">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>25%</h6></label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="animated fadeIn" *ngIf="current_poll == 5">
+                  <div class="card card-success" style="width: 100%;">
+                    <div class="card-body text-center">
+                      <p class="card-title pt-1">Bisakah kita hari ini berpegang teguh untuk melakukan “THINKING” digital dalam cara kita bekerja?</p>
+                      <div>
+                        <canvas baseChart
+                                style="display: block; height: 300px"
+                                [data]="doughnutChartData"
+                                [labels]="doughnutChartLabels"
+                                [chartType]="doughnutChartType">
+                        </canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                <div class="row">
+                  <div class="col">
+                    <button class="btn btn-outline-secondary" type="button" (click)="previous()" [disabled]="current_poll == 1"><i class="fa fa-angle-left"></i> Sebelumnya</button>
+                  </div>
+                  <div class="col text-right">
+                    <button class="btn btn-outline-secondary" type="button" (click)="next()" [disabled]="current_poll == 5">Berikutnya <i class="fa fa-angle-right"></i> </button>
+                  </div>
                 </div>
               </div>
             </div>
