--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -50,21 +50,54 @@
 	}
 }
 
+.card-poll {
+
+	.card {
+		position: absolute;
+		height: 100%;
+	}
+
+	.card-footer {
+		position: absolute;
+		width: 100%;
+		bottom: 0;
+		border: none;
+		background: transparent;
+	}
+
+	.progressbar-poll {
+		padding: 5px;
+		border-radius: 15px;
+		overflow: visible;
+		position: relative;
+
+		label {
+			position: absolute;
+    		right: -50px;
+		}
+
+		.progress-bar {
+			height: 30px;
+			border-radius: 10px;
+		}
+	}
+}
+
 .comment-section {
 	.card-block .card-body {
 		padding: 15px;
 	}
-}
 
-.card-footer .row > div {
-	text-align: right;
+	.card-footer .row > div {
+		text-align: right;
 
-	button {
-		border: none;
-		border-radius: 50px;
-		width: 35px;
-		height: 35px;
-		padding: 0;
+		button {
+			border: none;
+			border-radius: 50px;
+			width: 35px;
+			height: 35px;
+			padding: 0;
+		}
 	}
 }
 
