word cloud question 1

--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -1,6 +1,7 @@
 <div class="align-items-center bg-black">
   <header class="navbar navbar-ut">
     <a class="navbar-brand" href="#">#UT<strong>Beyond</strong></a>
+    <button class="btn btn-sm btn-link btn-refresh-ut" (click)="restartVote()" style="right: 32px"><i class="fa fa-history"></i></button>
     <button class="btn btn-sm btn-link btn-refresh-ut" (click)="refreshPage()"><i class="fa fa-refresh"></i></button>
   </header>
 
