--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -26,11 +26,11 @@
             <div class="card card-poll card-success height-45vh" style="margin-bottom: 0">
               <div class="card-body">
                 <div class="animated fadeIn" *ngIf="current_poll == 1">
-                  <div class="card card-success" style="width: 100%;">
+                  <div class="card card-inverse card-success" style="width: 100%;">
                     <div class="card-body text-center">
                       <h5 class="card-title pt-2">Apa yang muncul di benak anda ketika mendengar kata “Digital”?</h5>
                       <angular-tag-cloud
-                        [data]="data"
+                        [(data)]="dataAnswer1"
                         [width]="options.width"
                         [height]="options.height"
                         [overflow]="options.overflow">
@@ -152,10 +152,10 @@
               <div class="card-footer">
                 <div class="row">
                   <div class="col">
-                    <button class="btn btn-outline-secondary" type="button" (click)="previous()" [disabled]="current_poll == 1"><i class="fa fa-angle-left"></i> Sebelumnya</button>
+                    <button class="btn btn-danger btn-secondary" type="button" (click)="previous()" [disabled]="current_poll == 1"><i class="fa fa-angle-left"></i> Sebelumnya</button>
                   </div>
                   <div class="col text-right">
-                    <button class="btn btn-outline-secondary" type="button" (click)="next()" [disabled]="current_poll == 5">Berikutnya <i class="fa fa-angle-right"></i> </button>
+                    <button class="btn btn-danger btn-secondary" type="button" (click)="next()" [disabled]="current_poll == 5">Berikutnya <i class="fa fa-angle-right"></i> </button>
                   </div>
                 </div>
               </div>
