--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -42,12 +42,12 @@
                   <div class="card card-success" style="width: 100%;">
                     <div class="card-body text-center">
                       <h5 class="card-title pt-2">Bisakah anda sukses tanpa menjadi Digital?</h5>
-                      <div>
+                      <div class="question2chart">
                         <canvas baseChart
                                 style="display: block; height: 300px"
-                                [data]="doughnutChartData"
-                                [labels]="doughnutChartLabels"
-                                [chartType]="doughnutChartType">
+                                [data]="doughnutChart2Data"
+                                [labels]="doughnutChart2Labels"
+                                [chartType]="doughnutChart2Type">
                         </canvas>
                       </div>
                     </div>
