--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -63,8 +63,8 @@
                         </div>
                         <div class="col-md-8">
                           <div class="progress progress-lg my-1 progressbar-poll">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                            <label><h6>15%</h6></label>
+                            <div class="progress-bar bg-danger" role="progressbar" [ngStyle]="{'width': percent3afloor + '%'}" attr.aria-valuenow="{{percent3afloor}}" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>{{percent3afloor}}%</h6></label>
                           </div>
                         </div>
                       </div>
@@ -74,8 +74,8 @@
                         </div>
                         <div class="col-md-8">
                           <div class="progress progress-lg my-1 progressbar-poll">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                            <label><h6>45%</h6></label>
+                            <div class="progress-bar bg-warning" role="progressbar" [ngStyle]="{'width': percent3bfloor + '%'}" attr.aria-valuenow="{{percent3bfloor}}" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>{{percent3bfloor}}%</h6></label>
                           </div>
                         </div>
                       </div>
@@ -85,8 +85,8 @@
                         </div>
                         <div class="col-md-8">
                           <div class="progress progress-lg my-1 progressbar-poll">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            <label><h6>25%</h6></label>
+                            <div class="progress-bar bg-info" role="progressbar" [ngStyle]="{'width': percent3cfloor + '%'}" attr.aria-valuenow="{{percent3cfloor}}" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>{{percent3cfloor}}%</h6></label>
                           </div>
                         </div>
                       </div>
@@ -103,8 +103,8 @@
                         </div>
                         <div class="col-md-8">
                           <div class="progress progress-lg my-1 progressbar-poll">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                            <label><h6>15%</h6></label>
+                            <div class="progress-bar bg-danger" role="progressbar" [ngStyle]="{'width': percent4afloor + '%'}" attr.aria-valuenow="{{percent4afloor}}" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>{{percent4afloor}}%</h6></label>
                           </div>
                         </div>
                       </div>
@@ -114,8 +114,8 @@
                         </div>
                         <div class="col-md-8">
                           <div class="progress progress-lg my-1 progressbar-poll">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                            <label><h6>45%</h6></label>
+                            <div class="progress-bar bg-warning" role="progressbar" [ngStyle]="{'width': percent4bfloor + '%'}" attr.aria-valuenow="{{percent4bfloor}}" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>{{percent4bfloor}}%</h6></label>
                           </div>
                         </div>
                       </div>
@@ -125,8 +125,8 @@
                         </div>
                         <div class="col-md-8">
                           <div class="progress progress-lg my-1 progressbar-poll">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            <label><h6>25%</h6></label>
+                            <div class="progress-bar bg-info" role="progressbar" [ngStyle]="{'width': percent4cfloor + '%'}" attr.aria-valuenow="{{percent4cfloor}}" aria-valuemin="0" aria-valuemax="100"></div>
+                            <label><h6>{{percent4cfloor}}%</h6></label>
                           </div>
                         </div>
                       </div>
