display question 5 done

--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -137,12 +137,12 @@
                   <div class="card card-success" style="width: 100%;">
                     <div class="card-body text-center">
                       <p class="card-title pt-1">Bisakah kita hari ini berpegang teguh untuk melakukan “THINKING” digital dalam cara kita bekerja?</p>
-                      <div>
+                      <div class="question2chart">
                         <canvas baseChart
                                 style="display: block; height: 300px"
-                                [data]="doughnutChartData"
-                                [labels]="doughnutChartLabels"
-                                [chartType]="doughnutChartType">
+                                [data]="doughnutChart5Data"
+                                [labels]="doughnutChart5Labels"
+                                [chartType]="doughnutChart5Type">
                         </canvas>
                       </div>
                     </div>
