embed tweet feed and post

--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -163,10 +163,12 @@
           </div>
           <div class="col-md-12 no-padding">
             <div class="card card-primary height-45vh comment-section">
-              <div class="card-header">
+               <iframe style="display: block; margin-left: 0; width:100%; height: 500px; padding-left:15%;" class="twitter-timeline" src="https://www.edu-apps.org/tools/twitter/twitter_embed.html?widget_id=927144291951972353&url=https%3A%2F%2Ftwitter.com/search?q=%40unitedtractors"></iframe>
+              <!-- <div class="card-header">
                 <h5>Tweets & komentar</h5>
               </div>
-              <div class="card-block" style="overflow-y: auto">
+              <div class="card-block" style="overflow-y: auto;">
+          
                 <div class="card card-light">
                   <div class="card-body">
                     <p class="card-text"><i class="fa fa-twitter"></i> @unitedtractors</p>
@@ -187,8 +189,10 @@
                     <h5 class="card-title">With supporting text below as a natural lead-in to additional content.</h5>
                   </div>
                 </div>
-              </div>
+              </div> -->
+
               <div class="card-footer">
+                <a style="color:white;" class="btn btn-secondary" href="https://twitter.com/intent/tweet?screen_name=UnitedTractors&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @UnitedTractors</a> or <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <form>
                   <div class="row">
                     <div class="col-3">
